// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileDownloads renders multiple downloads correctly 1`] = `
<div>
  <div
    class="dropdown-row"
  >
    <select
      aria-label="File Download Dropdown"
      class="download-dropdown form-control"
    >
      <optgroup
        label="Download Group Name 1"
      >
        <option
          id="123-0-0"
          value="Download Name 1"
        >
          Download Name 1
        </option>
        <option
          id="123-0-1"
          value="Download Name 2"
        >
          Download Name 2
        </option>
      </optgroup>
      <optgroup
        label="Download Group Name 2"
      >
        <option
          id="123-1-0"
          value="Download Name 3"
        >
          Download Name 3
        </option>
      </optgroup>
    </select>
    <a
      class="btn btn-sm btn-link"
      href="group1/link1"
      role="link"
    >
      download
    </a>
  </div>
  <div
    class="download-details small"
  >
    <span
      class="details"
    >
      <span
        class="detail-label"
      >
        fileSize
      </span>
      :
       
      <span
        class="detail-value"
      >
        100kb
      </span>
    </span>
    <span
      class="details"
    >
      <span
        class="detail-label"
      >
        md5
      </span>
      :
       
      <span
        class="detail-value"
      >
        ABC
      </span>
    </span>
  </div>
</div>
`;

exports[`FileDownloads renders single download correctly 1`] = `
<div>
  <div
    class="dropdown-row"
  >
    <a
      class="btn btn-sm btn-link"
      href="/"
      role="link"
    >
      download
    </a>
  </div>
  <div
    class="download-details small"
  >
    <span
      class="details"
    >
      <span
        class="detail-label"
      >
        fileSize
      </span>
      :
       
      <span
        class="detail-value"
      >
        100kb
      </span>
    </span>
  </div>
</div>
`;
